kubernetes/apps/networking/pod-gateway/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway
  namespace: networking
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: pod-gateway
    egress:
      - toPorts:
          - ports:
              - port: "1637"
                protocol: UDP
